Fix readme file and syntax errors

--- a/proyJSFMaven/src/main/webapp/vista1.xhtml
+++ b/proyJSFMaven/src/main/webapp/vista1.xhtml
@@ -16,8 +16,8 @@
 </p>
 <p>
 <h:commandButton value="Añadir" action="#{obj.add}" />
-<h:commandButton value="Mostrar" action="#{obj.mostrar}"/>
-<h:outputText value="#{obj.last}" /> 
+<h:commandButton value="Mostrar" action="#{obj.mostrar}"/><br>
+<h:outputText value="#{obj.last}" />
 </p>
 </h:form>
 
